<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/TV_tittle_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/TV_sentence_margin_top_"
        android:text="Car on aime pas se faire Carrote"
        android:textColor="@android:color/black"
        android:textSize="@dimen/TV_sentence_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_name_login"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:hint="@string/name"
        android:padding="@dimen/padding"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="@dimen/ET_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ET_margin_top"
        android:hint="@string/email"
        android:padding="@dimen/padding"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="@dimen/ET_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_login"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ET_margin_top"
        android:hint="@string/password"
        android:padding="@dimen/padding"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="@dimen/ET_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_login"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@android:color/black"
        android:padding="@dimen/padding"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Already_Register"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>