<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".auth.RegisterActivity">



        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TV_tittle_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/TV_sentence_margin_top_"
            android:text="Car on aime pas se faire Carrote"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TV_sentence_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />


        <EditText
            android:id="@+id/et_email_register"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="250dp"
            android:hint="@string/email"
            android:padding="@dimen/padding"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/ET_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLogin2"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ET_margin_top"
            android:hint="@string/password"
            android:padding="@dimen/padding"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/ET_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_register"
            tools:ignore="Autofill,TextFields" />


        <Button
            android:id="@+id/button_register"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@android:color/black"
            android:padding="@dimen/padding"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_register" />


        <ProgressBar
            android:id="@+id/progressBarRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_register" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>